2015-01-25  peavo@outlook.com  <peavo@outlook.com>

        [Win] Add WebKit message loop interface.
        https://bugs.webkit.org/show_bug.cgi?id=140857

        Reviewed by Brent Fulgham.

        Added message loop interface which will run the message loop,
        and perform required tasks (like calling CFRunLoopRunInMode)
        on each iteration of the loop.

        * WebKit.vcxproj/WebKit/WebKit.vcxproj: Added new files to project.
        * WebKit.vcxproj/WebKit/WebKit.vcxproj.filters: Ditto.

2015-01-22  Andreas Kling  <akling@apple.com>

        Remove unused class EmojiFallbackFontSelector.
        <https://webkit.org/b/140809>

        Reviewed by Antti Koivisto.

        * WebKit.xcodeproj/project.pbxproj:

2015-01-21  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(INSPECTOR) ifdef guards
        https://bugs.webkit.org/show_bug.cgi?id=140668

        Reviewed by Darin Adler.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2015-01-20  David Kilzer  <ddkilzer@apple.com>

        Switch to comparing PLATFORM_NAME in terms of macosx
        <http://webkit.org/b/139516>

        Reviewed by Timothy Hatcher.

        * WebKit.xcodeproj/project.pbxproj:

2015-01-19  Anders Carlsson  <andersca@apple.com>

        Try to fix build warnings with newer versions of clang.

        * Storage/StorageAreaImpl.h:

2015-01-17  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: highlight data for overlay should use protocol type builders
        https://bugs.webkit.org/show_bug.cgi?id=129441

        Reviewed by Timothy Hatcher.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in: Update symbol.

2015-01-14  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed build fix after r178459 and r178462.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in: Add some
        missing exports needed by the test infrastructure.

2015-01-14  Brent Fulgham  <bfulgham@apple.com>
