@@ -146,9 +146,6 @@ interface IWebPreferencesPrivate : IUnknown
     HRESULT mockScrollbarsEnabled([out, retval] BOOL* enabled);
     HRESULT setMockScrollbarsEnabled([in] BOOL enabled);
 
-    HRESULT screenFontSubstitutionEnabled([out, retval] BOOL* enabled);
-    HRESULT setScreenFontSubstitutionEnabled([in] BOOL enabled);
-
     HRESULT isInheritURIQueryComponentEnabled([out, retval] BOOL* enabled);
     HRESULT setEnableInheritURIQueryComponent([in] BOOL enabled);
 }
