@@ -1,3 +1,9 @@
+2015-01-29  Brent Fulgham  <bfulgham@apple.com>
+
+        [Win] Build fix after r179368.
+
+        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in: Remove missing symbol.
+
 2015-01-25  peavo@outlook.com  <peavo@outlook.com>
 
         [Win] Add WebKit message loop interface.
